# aws-eks-multi-language-cicd-enterprise

./: .gitignore  README.md  lessons.md  package-lock.json  readme2.md
.github/workflows/: README.md  ci-platform.yml  deploy-dev.yml  deploy-production.yml  deploy-staging.yml  deploy.yml.disabled  java-ci-docker-version.yml  java-ci.yml  java-ci.yml.disabled  javascript-ci-docker-version.yml  javascript-ci.yml  javascript-ci.yml.disabled  multi-lang-build-ci.yml.disabled  platform-ci.yml.disabled  promote.yml  react-dashboard-ci-docker-version.yml  react-dashboard-ci.yml  release-summary.yml  rollback.yml  rust-ci-docker-version.yml  rust-ci.yml  rust-ci.yml.disabled  security-scanning.yml  terraform-apply.yml.disabled  terraform-plan.yml.disabled
argocd/: root-app.yml
docs/: DECISIONS.md  PROJECT-WALKTHROUGH.md  TROUBLESHOOTING.md
docs/architecture/: INTERVIEW-GUIDE.md
gitops/dev/: java-service.yaml  java-service.yamll  javascript-api.yaml  javascript-api.yamll  react-dashboard.yaml  rust-processor.yaml  rust-processor.yamll
gitops/production/: java-service.yaml  javascript-api.yaml  react-dashboard.yaml  rust-processor.yaml
gitops/staging/: java-service.yaml  javascript-api.yaml  react-dashboard.yaml  react-dashboard.yamll  (+1 more)
polyglot-microservices/backend/rust-processor/: Cargo.toml  Dockerfile  README.md
polyglot-microservices/backend/rust-processor/src/: lib.rs  main.rs
polyglot-microservices/backend/rust-processor/tests/: integration_test.rs
scripts/: bootstrap.sh  eks-nodegp-cft.yaml  install-tools.sh  private_userdata.sh  public_userdata.sh
(+286 files in other folders)
