[package]
name = "rust_processor"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.9"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "rust_processor"
path = "src/main.rs"